# spbu-qt-clientserver

./: README.md
client/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
server/: CMakeLists.txt  server.cpp  server.h
